153 ==> 227266 - Handle Video Date from metadata.
154 ==> 227259 - Needs to Edit Video Date.
155 ==> 373284 - digiKam crashed with SIGSEGV in QSortFilterProxyModel::parent().
156 ==> 384807 - digikam 5.7.0 AppImage bundle : provide a more recent ffmpeg version for video support.
157 ==> 391835 - Deleted pictures still appear in group.
158 ==> 387483 - Elegant theme: Selected frame colors swapped [patch].
159 ==> 375424 - Thumbnails are not being removed from AlbumsView after moving the images to Trash.
160 ==> 368796 - Problem with Exif-tags: ImageDescription and UserComment.
161 ==> 392417 - AppImage (5.9.0-01-x86-64) does not support "--install" cli parameter.
162 ==> 392922 - digikam-6.0.0 fail to start.
163 ==> 391399 - Not possible to add location bookmarks in Digikam >5.6.0.
164 ==> 380876 - Tags in Digikam DB maintained after being removed from file and file re-scanned.
165 ==> 392017 - Merging, renaming and removing face tags.
166 ==> 352711 - Externally removed tags are not removed from digiKam.
167 ==> 393108 - Tags not always visible when selecting multiple pictures in a group.
168 ==> 392656 - Selecting a root album for face scan doesn't include subfolders, but rather scans an unexpected album set.
169 ==> 329438 - Rename function with Date & Time does not work with NTFS.
170 ==> 376473 - Can"t set empty IPTC country code when using metadata templates.
171 ==> 380289 - Cannot write to Albums residing on NFS.
172 ==> 384465 - With Compact Flash Card Created date in thumbnails is wrong.
173 ==> 381958 - Cannot add additional collection.
174 ==> 383747 - "Rotate only by setting a flag" Changes Image Instead.
175 ==> 387977 - No icon only view of "Extras sidebar": sidebar taking up a lot of space.
176 ==> 277502 - All versions of version set always displayed in Album view [patch].
177 ==> 393283 - Caption not updating Exif.Image.ImageDescription field.
178 ==> 391060 - Crashes on undo of very large tif.
179 ==> 